--- a/app/src/main/res/layout/activity_story_screen.xml
+++ b/app/src/main/res/layout/activity_story_screen.xml
@@ -26,7 +26,8 @@
             android:layout_height="wrap_content"
             android:ems="10"
             android:inputType="textPersonName"
-            android:text="Name" />
+            android:text=""
+            android:hint="hint text"/>
 
         <Button
             android:id="@+id/editButton"
