--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -15,30 +15,97 @@
             android:id="@+id/title"
             android:layout_width="match_parent"
             android:layout_height="62dp"
+            android:layout_weight=".1"
             android:gravity="center"
             android:text="Mad libs"
             android:textSize="42sp"
-            tools:layout_editor_absoluteX="214dp"
+            tools:layout_editor_absoluteX="110dp"
             tools:layout_editor_absoluteY="16dp" />
 
-        <TextView
-            android:id="@+id/discription"
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="133dp"
-            android:layout_weight="0.7"
-            android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam massa mauris, aliquam sit amet feugiat at, dapibus eget sapien. Morbi a turpis et tortor aliquet gravida a id risus. Nulla mattis lacinia ex et elementum. Maecenas maximus odio elit, a ullamcorper orci viverra a. Suspendisse tincidunt consequat nunc. Vivamus suscipit vestibulum metus, a dignissim arcu sollicitudin quis. Aenean justo quam, dapibus ullamcorper massa eu, volutpat egestas sapien. Aliquam commodo, libero id sollicitudin laoreet, tellus leo efficitur quam,"
-            tools:layout_editor_absoluteX="30dp"
-            tools:layout_editor_absoluteY="88dp" />
+            android:layout_height="match_parent"
+            android:layout_weight="0.5">
 
-        <Button
-            android:id="@+id/getStarted"
-            android:layout_width="match_parent"
-            android:layout_height="79dp"
-            android:text="Get started"
-            tools:layout_editor_absoluteX="27dp"
-            tools:layout_editor_absoluteY="472dp" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal">
+
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="0.5">
+
+                    <ImageView
+                        android:id="@+id/imageView2"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="0.5"
+                        app:srcCompat="@drawable/madlibs" />
+                </RelativeLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="0.5"
+                    android:orientation="vertical">
+
+                    <Button
+                        android:id="@+id/simple"
+                        android:layout_width="match_parent"
+                        android:layout_height="79dp"
+                        android:layout_weight="0.02"
+                        android:onClick="onClick"
+                        android:text="Tarzan Story"
+                        tools:layout_editor_absoluteX="27dp"
+                        tools:layout_editor_absoluteY="472dp" />
+
+                    <Button
+                        android:id="@+id/tarzan"
+                        android:layout_width="match_parent"
+                        android:layout_height="79dp"
+                        android:layout_weight="0.02"
+                        android:onClick="onClick"
+                        android:text="Tarzan Story"
+                        tools:layout_editor_absoluteX="27dp"
+                        tools:layout_editor_absoluteY="472dp" />
+
+                    <Button
+                        android:id="@+id/university"
+                        android:layout_width="match_parent"
+                        android:layout_height="79dp"
+                        android:layout_weight=".02"
+                        android:onClick="onClick"
+                        android:text="University Story"
+                        tools:layout_editor_absoluteX="27dp"
+                        tools:layout_editor_absoluteY="472dp" />
+
+                    <Button
+                        android:id="@+id/clothes"
+                        android:layout_width="match_parent"
+                        android:layout_height="79dp"
+                        android:layout_weight="0.02"
+                        android:onClick="onClick"
+                        android:text="Clothes Story"
+                        tools:layout_editor_absoluteX="27dp"
+                        tools:layout_editor_absoluteY="472dp" />
+
+                    <Button
+                        android:id="@+id/dance"
+                        android:layout_width="match_parent"
+                        android:layout_height="79dp"
+                        android:layout_weight="0.02"
+                        android:onClick="onClick"
+                        android:text="Dance Story"
+                        tools:layout_editor_absoluteX="27dp"
+                        tools:layout_editor_absoluteY="472dp" />
 
 
+                </LinearLayout>
+            </LinearLayout>
+        </RelativeLayout>
     </LinearLayout>
+
 
 </android.support.constraint.ConstraintLayout>
