--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,14 +22,22 @@
             tools:layout_editor_absoluteX="110dp"
             tools:layout_editor_absoluteY="16dp" />
 
-        <TextView
-            android:id="@+id/discription"
+        <ImageView
+            android:id="@+id/imageView2"
             android:layout_width="match_parent"
-            android:layout_height="184dp"
-            android:layout_weight="0.5"
-            android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam massa mauris, aliquam sit amet feugiat at, dapibus eget sapien. Morbi a turpis et tortor aliquet gravida a id risus. Nulla mattis lacinia ex et elementum. Maecenas maximus odio elit, a ullamcorper orci viverra a. Suspendisse tincidunt consequat nunc. Vivamus suscipit vestibulum metus, a dignissim arcu sollicitudin quis. Aenean justo quam, dapibus ullamcorper massa eu, volutpat egestas sapien. Aliquam commodo, libero id sollicitudin laoreet, tellus leo efficitur quam,"
-            tools:layout_editor_absoluteX="30dp"
-            tools:layout_editor_absoluteY="88dp" />
+            android:layout_height="wrap_content"
+            android:layout_weight="2.5"
+            app:srcCompat="@drawable/madlibs" />
+
+        <Button
+            android:id="@+id/simple"
+            android:layout_width="match_parent"
+            android:layout_height="79dp"
+            android:layout_weight="0.05"
+            android:onClick="onClick"
+            android:text="simple Story"
+            tools:layout_editor_absoluteX="27dp"
+            tools:layout_editor_absoluteY="472dp" />
 
         <Button
             android:id="@+id/tarzan"
